Fix padding for popover product card spacing mobile

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -218,7 +218,7 @@
   }
 
   .grid--2-col-tablet-down .card__information-volume-pricing-note--button + .global-settings-popup.quantity-popover__info .quantity__rules {
-    margin-top: 4.2rem;
+    margin-top: calc(var(--border-width) * 1.75);
   }
 
   .grid--2-col-tablet-down .card__content quick-add-bulk .quantity {
